manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otrs-projects
  namespace: treinamento-microservices
  labels:
    app: projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projects
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: projects
    spec:
      containers:
      - image: harbor.domain.com.br/openproject-api/otrs-projects:1.1
        name: otrs-projects
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            memory: 128Mi
            cpu: 125m
          limits:
            memory: 500Mi
            cpu: 500m
      imagePullSecrets:
      - name: harbor
